objects/ES_Project_Intake__c.object
<CustomObject>
    <fields>
        <fullName>ARR__c</fullName>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR_Alias__c</fullName>
        <label>AR Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Exec__c</fullName>
        <label>Account Exec</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Billable_Hrs__c</fullName>
        <label>Actual Billable Hrs</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Go_Live_Date__c</fullName>
        <label>Actual Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Productive_Hrs__c</fullName>
        <label>Actual Productive Hrs</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_TTC__c</fullName>
        <label>Actual TTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Total_Project_Hrs__c</fullName>
        <label>Actual Total Project Hrs</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Notes__c</fullName>
        <label>Approval Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Hrs_Budget_Health__c</fullName>
        <label>Billable Hrs Budget Health</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Hrs_Budget__c</fullName>
        <label>% Billable Hrs/ Budget</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Billable_Hrs_Remaining__c</fullName>
        <label>Billable Hrs Remaining</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Health__c</fullName>
        <label>Budget Health</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Used__c</fullName>
        <label>% Budget Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Contact__c</fullName>
        <label>CSM Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Email__c</fullName>
        <label>CSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSM_Phone_Number__c</fullName>
        <label>CSM Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Date__c</fullName>
        <label>Closed/ Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Phone_Number__c</fullName>
        <label>Customer Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DevOps_Consultant_Contact__c</fullName>
        <label>DevOps Consultant Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DevOps_Consultant_Email__c</fullName>
        <label>DevOps Consultant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DevOps_Consultant_Phone_Number__c</fullName>
        <label>DevOps Consultant Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Project_Hrs__c</fullName>
        <label>Free Project Hrs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health__c</fullName>
        <label>Health</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosting_Type__c</fullName>
        <label>Hosting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Remaining__c</fullName>
        <label>Hours Remaining</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Index_Planned_End_Date__c</fullName>
        <label>Index Planned End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index_Planned_Go_Live_Date__c</fullName>
        <label>Index Planned Go Live Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_URL__c</fullName>
        <label>Instance URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Main_Customer_Contact_Name__c</fullName>
        <label>Main Customer Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_ID__c</fullName>
        <label>Opp ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Out__c</fullName>
        <label>Opt-Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Team_Members__c</fullName>
        <label>Other Team Members</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Complete__c</fullName>
        <label>POC % Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Type__c</fullName>
        <label>PS Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Value__c</fullName>
        <label>PS Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Hours_Consumed__c</fullName>
        <label>Paid Hours Consumed</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Hrs_Budget_Health__c</fullName>
        <label>Paid Hrs Budget Health</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Hrs_Paid_Budget__c</fullName>
        <label>% Paid Hrs/ Paid Budget</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Hrs_Remaining__c</fullName>
        <label>Paid Hrs Remaining</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Project_Hrs__c</fullName>
        <label>Paid Project Hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Go_Live_Date__c</fullName>
        <label>Planned Go Live Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_TTC__c</fullName>
        <label>Planned TTC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predecessors__c</fullName>
        <label>Predecessors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Link__c</fullName>
        <label>Project Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Contact__c</fullName>
        <label>Project Manager Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Email__c</fullName>
        <label>Project Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Phone_Number__c</fullName>
        <label>Project Manager Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Opportunity_Name__c</fullName>
        <label>Project [Opportunity] Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SF_Project_ID__c</fullName>
        <label>SF Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_PoP_End_Date__c</fullName>
        <label>SOW PoP End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Solution_Architect__c</fullName>
        <label>Sales Solution Architect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Architect_Contact__c</fullName>
        <label>Solution Architect Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Architect_Email__c</fullName>
        <label>Solution Architect Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Solution_Architect_Phone_Number__c</fullName>
        <label>Solution Architect Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TTV__c</fullName>
        <label>TTV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone_of_DevOps_Team__c</fullName>
        <label>Timezone of DevOps Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Hrs__c</fullName>
        <label>Total Budget (Hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Agency__c</fullName>
        <label>Vendor/ Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ES Project Intake</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Health__c</columns>
        <columns>Project_Link__c</columns>
        <columns>Approval_Status_Notes__c</columns>
        <columns>Notes__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Project_ID__c</columns>
        <columns>SF_Project_ID__c</columns>
        <columns>Account_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>ES Project Intake</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ES Project Intake</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>